--- a/NewsCrawler/Content/Main.css
+++ b/NewsCrawler/Content/Main.css
@@ -27,12 +27,13 @@ textarea {
 .web-logo {
     width: 150px;
     height: 50px;
-    background-color: black;
     display: block;
-    padding: 40px 60px 40px 60px;
-    background-image: url("../image/logobig.png");
+    padding: 90px 180px 90px 180px;
+    background-image: url("../image/logo_big.png");
+    background-size:contain;
+    background-repeat:no-repeat;
     margin: 0 auto;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
 }
 
 .web-search-bar > .form-textbox {
@@ -73,8 +74,4 @@ textarea {
 
 hr {
     width: auto;
-}
-
-footer {
-    margin-bottom: 0px;
 }
