--- a/NewsCrawler/Content/Site.css
+++ b/NewsCrawler/Content/Site.css
@@ -29,12 +29,11 @@ textarea {
 }
 
 .web-logo {
-    width: 150px;
-    height: 50px;
-    background-color: white;
     display: block;
     padding:20px 30px 20px 30px;
-    background-image: url("../image/logo.png");
+    background-image: url("../image/logo_white.png");
+    background-repeat:no-repeat;
+    background-size:cover;
 }
 
 .web-search-bar > .form-textbox {
@@ -55,7 +54,7 @@ textarea {
     border-bottom-left-radius: 0;
     border: 0px;
     height: 36px;
-    margin-bottom: 2px;
+    margin-bottom: 1px;
     margin-left: -4px;
 }
 
@@ -65,8 +64,7 @@ textarea {
 }
 
 .web-form{
-    margin-bottom:-15px;
-
+    margin-bottom:-10px;
 }
 
 /* for phone */
@@ -130,7 +128,7 @@ textarea {
     }
 
     .body-content {
-        margin-top: 80px;
+        margin-top: 100px;
     }
 }
 
